Starting to clean up previous vignette files and revise data paths
Moved old vignette files to oldvignettefiles folder and runMarineSub files to
tests folder. Began revising vignette to link to /inst/extdata for new files.

--- a/vignettes/custom.css
+++ b/vignettes/custom.css
@@ -1,8 +1,9 @@
 #TOC {
   position: fixed;
   left: 0;
-  top: 200px;
-  width: 200px;
+  top: 100px;
+  bottom: 0px;
+  width: 300px;
   height: 100%;
   overflow:auto;
 }
@@ -10,6 +11,6 @@
 body {
   max-width: 800px;
   margin: auto;
-  margin-left:210px;
+  margin-left:310px;
   line-height: 20px;
 }
